<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:padding="20dp">

    <Button
        android:id="@+id/btnDisplayAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnDisplayID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="44dp"
        android:text="@string/read_alldata" />

    <Button
        android:id="@+id/btnDisplayRowCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="92dp"
        android:text="@string/read_rowcount" />

    <Button
        android:id="@+id/btnDisplayID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDisplayRowCount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/read_id" />
</RelativeLayout>