<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.androiddevs.sqlite.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDisplay"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/create" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="192dp"
        android:padding="20dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:text="@string/update" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnUpdate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:text="@string/read" />

</RelativeLayout>
