<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Enter Id"
        android:inputType="number" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnDeleteWithKey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/delete_id" />

    <Button
        android:id="@+id/btnDeleteWithName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/delete_name" />


    <Button
        android:id="@+id/btnDeleteAllValues"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/delete_allrow" />


    <TextView
        android:id="@+id/tvSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:textColor="@android:color/white" />

</LinearLayout>