<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:padding="20dp">

    <EditText
        android:id="@+id/etId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Enter ID"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etId"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etName"
        android:ems="10"
        android:hint="Enter Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnUpdateEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_email"
        android:layout_above="@+id/btnUpdateName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnUpdateName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="@string/update_name"
        android:layout_alignBottom="@+id/tvSnackBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnUpdateAll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_id"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:textColor="@android:color/white" />

</RelativeLayout>